<resources>
    <string name="app_name">Wayang App</string>
    <string name="info_app">
        Wayang App adalah sebuah aplikasi klasifikasi dan informasi mengenai wayang. Aplikasi ini memberikan informasi mengenai wayang sebgai budaya indonesia, dengan fokus pada kategori Wayang Beber, Wayang Gedog, Wayang Golek, Wayang Krucil, Wayang Kulit, dan Wayang Suluh. Aplikasi ini merupakan panduan yang interaktif dan inofatif bagi para penggemar wayang, pelajar seni tradisional, dan siapa pun yang ingin mendalami kekayaan warisan Indonesia.
        \n\nAplikasi ini juga menjadi bagian tugas akhir PENERAPAN METODE CONVOLUTIONAL NEURAL NETWORK PADA PEMBUATAN APLIKASI KLASIFIKASI JENIS WAYANG  BERBASIS ANDROID Universitas Gunadarma.
    </string>
    <string-array name="data_wayang_name">
        <item>Wayang Beber</item>
        <item>Wayang Gedog</item>
        <item>Wayang Golek</item>
        <item>Wayang Kulit</item>
        <item>Wayang Krucil</item>
        <item>Wayang Suluh</item>
    </string-array>
    <string-array name="data_wayang_description">
        <item>
            Masyarakat Indonesia mungkin lebih mengenal wayang kulit daripada wayang beber. Padahal nyatanya, wayang beber merupakan wayang tertua di Indonesia. Sedangkan, wayang kulit merupakan bentuk modifikasi dari wayang beber.
            \n\nSesuai dengan namanya, wayang beber adalah sebuah pertunjukan wayang yang dilakukan dengan cara membeberkan atau membentangkan lembaran kertas atau kain bergambar dengan stilisasi wayang (kulit) disertai narasi oleh seorang dalang.
            \n\nDisebut sebagai wayang tertua karena wayang beber mulai ada dan dikembangkan sejak zaman Kerajaan Jenggala tahun 1223 M. Lalu berlanjut hingga masa kerajaan-kerajaan Islam (seperti Kesultanan Mataram). Cerita yang ditampilkan diambil dari Mahabharata maupun Ramayana. Setelah Islam menjadi agama utama di Jawa, cerita-cerita Panji lebih banyak yang ditampilkan.
            \n\nPertunjukan wayang beber bisa dilakukan siang atau malam hari, kecuali malam Jum’at Kliwon karena pada malam tersebut wayang beber harus diberi sesajen. Sedangkan selama bulan puasa atau Ramadhan tidak diperkenankan melakukan pertunjukan wayang beber.
            \n\nLalu untuk dalang wayang beber harus seorang pria dan keahliannya mendalang itu diwariskan turun-temurun secara lisan kepada generasi penerus, biasanya seorang putra dari sang Dalang sendiri. Apabila sang Dalang tidak mempunyai anak laki-laki, keahlian mendalang itu dapat diwariskan kepada salah seorang keponakannya yang juga laki-laki.
            \n\nPerkembangan zaman menuntut wayang beber untuk turut menyesuaikan. Maka dari itu muncul wayang beber kontemporer yang dicetuskan oleh Dani Iswardana pada tahun 2005. Bila wayang klasik biasa menyajikan cerita Mahabharata dan Ramayana, sekarang wayang kontemporer lebih menonjolkan cerita tentang kehidupan masyarakat saat ini.
            \n\nSelain Dani, Komunitas Wayang Beber Metropolitan juga mementaskannya dengan pembahasan kehidupan di Jakarta lengkap dengan isu masyarakat perkotaan dan solusi yang ditawarkan. Bentuk Wayang Beber Metropolitan secara fisik banyak berubah bentuk dari tradisi. Namun walaupun banyak perubahan, ciri khas wayang beber masih terlihat jelas. Yaitu dengan adanya gambar yang berisi cerita wayang dan berbentuk gulungan gambar.
            \n\nMelalui Kementerian Pendidikan dan Kebudayaan, pemerintah juga berusaha mengenalkan wayang beber ke masyarakat. Lewat acara Festival Panji Nusantara yang digelar tiap tahun, wayang beber mendapatkan tempat untuk dipentaskan dan ditonton khalayak umum.
        </item>
        <item>
            Wayang Gedog atau Wayang Panji adalah wayang yang memakai cerita dari serat Panji. Wayang ini mungkin telah ada sejak zaman Majapahit. Bentuk wayangnya hampir sama dengan wayang purwa. Tokoh-tokoh kesatria selalu memakai tekes dan rapekan. Tokoh-tokoh rajanya memakai garuda mungkur dan gelung keling.
            \n\nWayang Gedog adalah wayang kulit yang menceritakan kisah sejak Sri Gatayu, Putera Prabu Jayalengkara sampai masa Prabu Kuda Laleyan. Sebutan Wayang Gedog diperkirakan berasal dari pertunjukan Wayang Gedog yang mula mula tanpa iringan kecrek (besi), sehingga bunyi suara keprak "dog" sangat dominan. Beberapa sumber ada yang mengatakan Wayang Gedhog bersumber dari kata kedok atau topeng, versi lain ada yang mengatakan Gedhog mengambil kata suara hentakan kaki kuda.
            \n\nCerita Wayang Gedog bersumber pada cerita Panji yang muncul pada zaman Kediri dan Majapahit. Istilah Panji sebagai gelar ksatria dan raja muncul pada zaman pemerintahan Jayabaya di Kediri pada abad XI. Pada masa itu Jayabaya bergelar Sang Mapanji Jayabaya yang memerintah pada tahun 1135-1157. Selain gelar panji, muncul juga gelar dengan mengambil nama-nama binatang perkasa sebagai penghormatan.
        </item>
        <item>
            Wayang golek merupakan salah satu merupakan warisan budaya Indonesia yang terdapat di daerah sunda jawa barat. Wayang golek merupakan sebuah pertunjukan wayang dari boneka kayu. Seperti wayang pada umumnya wayang golek diiringi oleh musik ketika ditampilkan. Biasanya dari alat music gamelan yang sering disebut slendro.
            \n\nDalam gamelan sunda, alat-alat diantaranya adalah saron, peking, selentem, kenong, gong, kempul, kendang indung, kendang kulanter, gambang dan rebab. Juga akan ada sinden yang akan mengiringi pertunjukan wayang golek dengan nyanyian yang merdu.
            \n\nAsal mula wayang golek tidak diketahui secara jelas karena tidak ada keterangan lengkap, baik tertulis maupun lisan. Kehadiran wayang golek tidak dapat dipisahkan dari wayang kulit karena wayang golek merupakan perkembangan dari wayang kulit.
        </item>
        <item>
            Wayang kulit dibuat dari bahan kulit sapi yang sudah diproses menjadi kulit lembaran. Wayang kulit dimainkan oleh seorang dalang yang juga menjadi narator dialog tokoh-tokoh wayang, dengan diiringi oleh musik gamelan yang dimainkan sekelompok nayaga dan tembang yang dinyanyikan oleh para pesinden.
            \n\nPertunjukan wayang kulit telah diakui oleh UNESCO pada tanggal 7 November 2003, sebagai karya kebudayaan yang mengagumkan dalam bidang cerita narasi dan warisan yang indah dan berharga (Masterpiece of Oral and Intangible Heritage of Humanity). Wayang kulit lebih populer di Jawa bagian tengah dan timur, sedangkan wayang golek lebih sering dimainkan di Jawa Barat.
        </item>
        <item>
            Wayang Krucil atau Wayang Klithik merupakan salah satu bentuk seni pertunjukan yang menggunakan wayang berukuran kecil, terbuat dari kayu pipih (waru, pinus, atau mentaos) dengan tangan terbuat dari kulit sehingga mudah digerak-gerakkan oleh dalang. Penamaan wayang krucil dikarenakan ukurannya yang lebih kecil dibandingkan wayang kulit, hanya ± 30 cm.
            Kata krucil mengacu pada penyebutan untuk anak kecil dalam masyarakat Jawa. Figur wayang krucil menyerupai wayang kulit purwa, tetapi berbeda tokoh dan karakternya.
            \n\nKesenian wayang krucil menyebar dan berkembang di sepanjang daerah aliran sungai (DAS) Brantas dan Bengawan Solo, mulai dari Jawa Timur yang meliputi wilayah Malang, Tulungagung, Kediri, Nganjuk, Ngawi, dan Bojonegoro, serta Blora di Jawa Tengah.
            \n\nPola persebarannya menunjukkan wayang krucil tumbuh dalam lingkungan agraris yang dekat dengan aliran air (sungai), sama sekali tidak  ditemukan di kawasan pantai utara Jawa, atau wilayah yang tidak berbatasan dengan DAS Brantas dan Bengawan Solo.
        </item>
        <item>
            Wayang Suluh adalah wayang yang terbuat dari kulit dan berbentuk manusia biasa, dengan tokoh wayang keseharian, misalnya P Lurah, P Haji, Ibu Guru, Bapak Guru, petani, saudagar, anak sekolah, mahasiswa dan lainya. Ceritanya pun tentang permasalahan sehari-hari dalam keluarga, masyarakat,dan kehidupan masyarakat pedesaan, sangat sederhana sesuai dengan keadaan masyarakat waktu itu.
            \n\nSuluh berarti "secercah sinar" terang. Wayang Suluh pada zaman setelah kemerdekaan digunakan untuk kepentingan Departemen Penerangan dalam melakukan penyuluhan pembangunan kepada masyarakat. Menteri Penerangan Ali Murtopo, Boediharjo dan Harmoko maberarti sih sempat wayang suluh dijadikan media penerangan yang handal. Bahkan Dalang wayang Kulit waktu itu dalam adegan Intermeso Limbukan, diselingi dengan memainkan wayang Suluh. Mbah Cermo dari Pacitan adalah Dalang wayang suluh ternama di daerah Pacitan tsekitar Tahun 70an.
        </item>
    </string-array>
    <string-array name="data_wayang_origin">
        <item>Pacitan, Jawa Timur</item>
        <item>Kediri, Jawa Timur</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah, Jawa Timur, dan Bali</item>
        <item>Jawa Timur</item>
        <item>Pacitan, Jawa Timur</item>
    </string-array>
    <string-array name="data_wayang_source">
        <item>wikipedia.org dan osm.medcom.id</item>
        <item>wikipedia.org</item>
        <item>wikipedia.org dan bantennews.co.id</item>
        <item>wikipedia.org</item>
        <item>encyclopedia.jakarta-tourism.go.id</item>
        <item>wikipedia.org dan kimpena.kabpacitan.id</item>
    </string-array>
    <string-array name="data_dalang_name">
        <item>Ki Nartosabdo</item>
        <item>Ki Anom Suroto</item>
        <item>Asep Sunandar Sunarya</item>
        <item>Ki Manteb Soedharsono</item>
        <item>Ki Slamet Gundono</item>
        <item>Anton Surono</item>
        <item>Ki Joko Edan</item>
        <item>Ki Timbul Hadiprayitno</item>
        <item>Widayat Djiang</item>
        <item>Ki Soenarjo (Naryo)</item>
    </string-array>
    <string name="start_classify_wayang">Mulai Klasifikasi Wayang</string>
    <string name="welcome_subtext">Mari temukan dan \npelajari lebih lanjut tentang Wayang</string>
    <string name="learn_btn">Belajar</string>
    <string name="wayang" translatable="false">Wayang</string>
    <string name="more_knowledge">Informasi Tambahan</string>
</resources>